Update readme to add in context for fork
This adds in an explanation as to why we have a fork and what it is needed for.

https://trello.com/c/iNuMxfk4/893-adopt-kevins-fork-of-accessible-autocomplete

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accessible-autocomplete",
+  "name": "accessible-autocomplete-multi-select",
   "version": "1.6.2",
   "main": "dist/accessible-autocomplete.min.js",
   "style": "dist/accessible-autocomplete.min.css",
