--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "accessible-autocomplete",
-  "version": "2.0.4",
+  "name": "accessible-autocomplete-multi-select",
+  "version": "2.0.0",
   "main": "dist/accessible-autocomplete.min.js",
   "style": "dist/accessible-autocomplete.min.css",
   "description": "An autocomplete component, built to be accessible.",
