Installed missing babel plugin

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-class-static-block": "^7.21.0",
     "@babel/plugin-proposal-decorators": "^7.23.2",
     "@babel/plugin-transform-member-expression-literals": "^7.22.5",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
