--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "accessible-autocomplete-multi-select",
-  "version": "2.0.0",
+  "name": "accessible-autocomplete",
+  "version": "2.0.4",
   "main": "dist/accessible-autocomplete.min.js",
   "style": "dist/accessible-autocomplete.min.css",
   "description": "An autocomplete component, built to be accessible.",
@@ -39,15 +39,14 @@
     "preact": "^8.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
+    "@babel/core": "^7.1.5",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-class-static-block": "^7.21.0",
-    "@babel/plugin-proposal-decorators": "^7.23.2",
-    "@babel/plugin-transform-member-expression-literals": "^7.22.5",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-transform-member-expression-literals": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/plugin-transform-property-literals": "^7.0.0",
     "@babel/plugin-transform-react-jsx": "^7.0.0",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-env": "^7.1.5",
     "@babel/register": "^7.0.0",
     "@wdio/cli": "^7.16.13",
     "@wdio/local-runner": "^7.16.13",
@@ -59,30 +58,29 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-istanbul": "^5.1.0",
-    "chai": "^4.3.10",
-    "chalk": "^5.3.0",
+    "chai": "^4.2.0",
+    "chalk": "^2.4.1",
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^5.2.0",
     "csso-cli": "^3.0.0",
     "dotenv": "^6.1.0",
     "husky": "^1.1.3",
-    "karma": "^6.4.1",
+    "karma": "^6.3.9",
     "karma-chai": "^0.1.0",
     "karma-chai-sinon": "^0.1.5",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.4.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^13.3.1",
     "replace-bundle-webpack-plugin": "^1.0.0",
     "sinon": "^6.3.5",
-    "sinon-chai": "^3.7.0",
+    "sinon-chai": "^3.2.0",
     "source-map-loader": "^1.1.3",
-    "standard": "^17.1.0",
+    "standard": "^12.0.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webdriverio": "^7.16.13",
     "webpack": "^4.46.0",
